# aiffel

./: .gitignore  Peer_Reveiw(for현동철_by변인섭).md  README.md
00_git_usage/: README.md
01_study/: predic_tip.ipynb  prediction_diabetes_level.ipynb  used_macbook_price.ipynb
02_study/: pratice_data_preprocessing.ipynb  pratice_evaluation_metric.ipynb
03_study/: pratice_basic_sklearn.ipynb  pratice_regularization.ipynb  pratice_unsupervised_learning.ipynb
04_study/: pokemon.ipynb
05_quest/: 05_merge_quest.ipynb  05_study.ipynb  README.md
07_study/: advanced_deep_learning_for_computer_vision.ipynb  deep_learning_for_computer_vision.ipynb
08_study/: README.md  basic_camera.ipynb  my_camera.ipynb
09_study/: README.md  segementation.ipynb
10_study/: time_series.ipynb
11_study/: deeplearning_for_text.ipynb
12_study/: generation_text.ipynb
13_study/: keras_tuner.ipynb
15_main_quest/: gpt_chatbot.ipynb  test_gpt_chatbot.ipynb
16_mian_quest_DLThon/: README.md  kobert-tokenizer Transformer.ipynb  make_data_file.ipynb
17_resnet_ablation_study/: README.md  node.ipynb  quest.ipynb  test.ipynb  test2.ipynb
18_data_augmentation/: node_2.ipynb  quest.ipynb  quest_colab.ipynb
19_class_activation_map/: README.md  node.ipynb
20_ocr/: README.md  node.ipynb  quest.ipynb  quest_colab.ipynb
21_face_detection/: README.md  node.ipynb
22_self_drive/: .gitignore  node.ipynb  quest.ipynb
23_road_segmentation/: README.md
24_pose/: .gitignore  README.md  (+2 more)
26_mlops/01day_1/fastapi/: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  start.sh
26_mlops/01day_1/fastapi/fastapi_server/: app.py
26_mlops/01day_2/flask/: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
26_mlops/01day_2/flask/flask_server/: app.py
26_mlops/02day/generator_data/: Dockerfile_iris  Dockerfile_wine  Makefile  docker-compose-iris.yaml  docker-compose-wine.yaml  pyproject.toml  requirements.txt
26_mlops/02day/generator_data/generator_data_script/: data_generator.py  data_generator2.py
26_mlops/03day/education/mysql/: pyproject.toml
26_mlops/03day/education/mysql/mysql_connection/: mysql_handling.py
26_mlops/04day/education/fastapi/: README.md  pyproject.toml
26_mlops/04day/education/fastapi/fastapi_server/: api.py  main.py  streamlit.py
26_mlops/05day/total_mlops/api_server/: README.md  pyproject.toml
26_mlops/05day/total_mlops/api_server/ml_app/: main.py
26_mlops/05day/total_mlops/api_server/ml_app/api/: ml_utils.py  router.py
26_mlops/05day/total_mlops/api_server/ml_app/api/endpoints/: create_datas.py  create_table.py  mlfow_train.py
26_mlops/05day/total_mlops/api_server/ml_app/core/: config.py
(+65 files in other folders)
