[tool.poetry]
name = "fastapi_server"
version = "0.0.1"
description = "mlops fastapi compose로 실행하기"
authors = ["hyeon <dev.dc.hyeon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"

[tool.poetry.scripts]
start_server = 'fastapi_server.app:start'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
