[tool.poetry]
name = "flask_server"
version = "0.0.1"
description = "mlops flask redis compose로 실행하기"
authors = ["hyeon <dev.dc.hyeon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
redis = "^5.0.7"

[tool.poetry.scripts]
start_server = 'flask_server.app:start'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
