[tool.poetry]
name = "mysql_connection"
version = "0.1.0"
description = ""
authors = ["hyeon <selwha1@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pymysql = "^1.1.1"
pandas = "^2.2.2"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
